# commenter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: sync_env_to_github_secrets.py
src/commenter/: main.py
src/commenter/agents/: __init__.py  crew.py
src/commenter/agents/config/: agents.yaml  tasks.yaml
src/commenter/core/: __init__.py  config.py
src/commenter/models/: __init__.py  comment.py  health.py
src/commenter/routers/: __init__.py  comment.py  health.py
tests/: test_comment.py  test_health.py
